--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,40 @@
 .App {
+  min-height: screen;
+  width: full;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.App-header {
+  min-height: screen;
+  width: full;
+  flex-direction: row;
+  place-items: center;
+  display: flex;
+  margin-bottom: 1.5vw;
+}
+
+.Title {
+  color: #4b4a67;
+  font-size: 8vw;
   text-align: center;
+  justify-self: center;
+  display: flex;
+}
+
+.Button {
+  width: 8vw;
+  height: 8vw;
+  border: none;
+  background: transparent;
+  display: flex;
+}
+
+.Icon {
+  width: 8vw;
+  color: #4b4a67;
+  display : flex;
 }
 
 .App-logo {
@@ -11,21 +46,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
