--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,12 @@ h3 {
   place-items: center center;
 }
 
+.Menu-icon {
+  width: 6vw;
+  display: flex;
+  place-items: center center;
+}
+
 .Project {
   background: white;
   border-radius: 3vw;
@@ -74,7 +80,7 @@ h3 {
 
 .List {
   text-align: left;
-  color: #FD96A9;
+  color: #4B4A67;
   font-size: 5vw;
   display: flex;
   margin-top: 2vw;
@@ -100,6 +106,7 @@ h3 {
   gap: 1.2vw;
 }
 
+
 .Restart-icon {
   width: 6vw;
   color: #FD96A9;
@@ -114,6 +121,10 @@ h3 {
   border-radius: 3vw;
 }
 
+#restart-button:hover {
+  background-color: #f9e5e9;
+}
+
 #add-button {
   border-style: solid;
   border-color: #4B4A67;
@@ -121,11 +132,19 @@ h3 {
   border-radius: 3vw;
 }
 
+#add-button:hover {
+  background-color: #e3e2f6;
+}
+
 #subtract-button {
   border-style: solid;
   border-color: #4B4A67;
   border-width: 0.6vw;
   border-radius: 3vw;
+}
+
+#subtract-button:hover {
+  background-color: #e3e2f6;
 }
 
 .Title-list {
@@ -148,8 +167,24 @@ h3 {
   margin-left: 5vw;
 }
 
+input {
+  border-style: solid;
+  border-color: #226F54;
+  border-width: 0.6vw;
+  border-radius: 3vw;
+  padding: 1vw;
+  color: #226F54;
+  font-size: 3vw;
+}
+
 .No-bullets {
   list-style-type:none;
+}
+
+#project-title:hover {
+  background-color: #e7eeda;
+  color: #038d5d;
+  border-radius: 3vw;
 }
 
 .App-logo {
