Refine style of home and counter pages

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 body {
   margin: 2vw;
   font-family: 'MonomaniacOne-Regular';
-  background-color: #c8d6af;
+  background-color: #8FD694;
 }
 
 @font-face {
