--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ h3 {
 }
 
 .Button:hover {
-  color: #049f69;
+  color: #8FD694;
   border-radius: 3vw;
 }
 
@@ -71,10 +71,10 @@ h3 {
   place-items: center center;
 }
 
-.Icon:hover {
-  color: #737199;
-  border-radius: 3vw;
+#home-icon:hover {
+  width: 8vw;
 }
+
 
 .Menu-icon {
   width: 6vw;
@@ -86,19 +86,34 @@ h3 {
   background: white;
   border-radius: 3vw;
   padding: 2vw;
-  padding-bottom: 4.5vw;
   border-style: solid;
   border-color: #226F54;
   border-width: 1vw;
 }
 
 .List {
-  text-align: left;
   color: #4B4A67;
   font-size: 5vw;
+}
+
+.Project-list {
   display: flex;
+  place-self: center center;
+  margin: 1vw;
+}
+
+table {
   margin-top: 2vw;
-  text-decoration: underline;
+  margin-bottom: 2vw;
+}
+
+td {
+  padding: 1vw;
+  padding-left: 2vw;
+  padding-right: 3vw;
+  text-align: right;
+  border-spacing: 0;
+  border-bottom: 0.4vw solid #226F54;
 }
 
 .Counters {
@@ -122,6 +137,14 @@ h3 {
   color: #FD96A9;
   display: flex;
   place-items: center center;
+}
+
+#trash-button {
+  color: #FD96A9;
+}
+
+#trash-button:hover {
+  color: #f8bfca;
 }
 
 #restart-button {
@@ -157,34 +180,34 @@ h3 {
   background-color: #e3e2f6;
 }
 
-.Title-list {
-  display: flex;
-  place-items: center center;
-  justify-content: space-between;
-  margin-left: 2vw;
-  margin-right: 7vw;
-}
-
-.Project-list {
-  display: flex;
-  place-items: center center;
-  justify-content: space-between;
-}
-
 .Name-input {
   display: flex;
-  place-items: center center;
-  margin-left: 5vw;
+  place-items: center space-between;
+  margin-left: 2vw;
+  background: #d7edd8;
+  padding: 1vw;
+  border-radius: 3vw;
 }
 
 input {
-  border-style: solid;
-  border-color: #226F54;
-  border-width: 0.6vw;
-  border-radius: 3vw;
-  padding: 1vw;
+  flex: 1;
+  border: none;
+  outline: none;
+  background: transparent;
   color: #226F54;
-  font-size: 3vw;
+  font-size: 4vw;
+  padding: 1vw;
+}
+
+textarea {
+  flex: 1;
+  border: none;
+  outline: none;
+  background: #d7edd8;
+  border-radius: 3vw;
+  color: #226F54;
+  font-size: 4vw;
+  padding: 3vw;
 }
 
 .No-bullets {
@@ -192,7 +215,7 @@ input {
 }
 
 #project-title:hover {
-  color: #038d5d;
+  color: #8FD694;
   border-radius: 3vw;
 }
 
