--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,7 @@
 body {
   margin: 2vw;
   font-family: 'MonomaniacOne-Regular';
-  background-color: #8FD694;
-  background-image: url("images/background.jpg");
+  background: #d7edd8;
 }
 
 @font-face {
