--- a/src/App.css
+++ b/src/App.css
@@ -115,9 +115,6 @@ h3 {
   background: white;
   border-radius: 3vw;
   padding: 2vw;
-  border-style: solid;
-  border-color: #226F54;
-  border-width: 1vw;
 }
 
 .List {
@@ -140,7 +137,7 @@ td {
   padding: 1vw;
   padding-left: 2vw;
   padding-right: 3vw;
-  text-align: right;
+  text-align: center;
   border-spacing: 0;
   border-bottom: 0.4vw solid #226F54;
 }
@@ -163,7 +160,14 @@ td {
 
 .Restart-icon {
   width: 6vw;
-  color: #FD96A9;
+  color: white;
+  display: flex;
+  place-items: center center;
+}
+
+.Count-icon {
+  width: 6vw;
+  color: white;
   display: flex;
   place-items: center center;
 }
@@ -177,9 +181,7 @@ td {
 }
 
 #restart-button {
-  border-style: solid;
-  border-color: #FD96A9;
-  border-width: 0.6vw;
+  background-color: #FD96A9;
   border-radius: 3vw;
 }
 
@@ -188,25 +190,21 @@ td {
 }
 
 #add-button {
-  border-style: solid;
-  border-color: #4B4A67;
-  border-width: 0.6vw;
+  background-color: #226F54;
   border-radius: 3vw;
 }
 
 #add-button:hover {
-  background-color: #e3e2f6;
+  background-color: #8FD694;
 }
 
 #subtract-button {
-  border-style: solid;
-  border-color: #4B4A67;
-  border-width: 0.6vw;
+  background-color: #226F54;
   border-radius: 3vw;
 }
 
 #subtract-button:hover {
-  background-color: #e3e2f6;
+  background-color: #8FD694;
 }
 
 .Name-input {
@@ -269,8 +267,7 @@ textarea:hover {
 }
 
 #sort-button:hover {
-  color: #8FD694;
-  border-radius: 3vw;
+  color: #8584b1;
 }
 
 .App-logo {
